--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,11 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.jetbrains.kotlin:kotlin-stdlib:0.11.91.1'
+}
