--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'osgi'
+
+group = 'org.libraryweasel.minkfx'
+version = '0.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -15,4 +19,5 @@ repositories {
 
 dependencies {
     compile 'org.jetbrains.kotlin:kotlin-stdlib:0.11.91.1'
+    testCompile 'junit:junit:4.11'
 }
