--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'osgi'
+apply plugin: 'maven'
 
 group = 'org.libraryweasel.minkfx'
 version = '0.1.0-SNAPSHOT'
