--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'kotlin'
 apply plugin: 'osgi'
 apply plugin: 'maven'
 
-group = 'org.libraryweasel.minkfx'
+group = 'org.libraryweasel.gridbuilder'
 version = '0.1.0-SNAPSHOT'
 
 repositories {
